--- a/privacy/privacy.html
+++ b/privacy/privacy.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy Policy - GameHub</title>
+  <title>Privacy Policy - mgames</title>
   <link rel="stylesheet" href="privacy.css">
 </head>
 
@@ -12,7 +12,7 @@
   <header>
     <div class="logo">
       <div class="logo-icon">🎮</div>
-      <h1>GameHub</h1>
+      <h1>mgames</h1>
     </div>
   </header>
 
@@ -28,17 +28,10 @@
       requiring sign-in or registration.
     </p>
 
-    <h3>Third-Party Ads</h3>
-    <p>
-      GameHub uses Google AdSense to display ads. Google may use cookies to serve ads based on your prior visits to this
-      or other websites.
-      You can learn more and manage your ad preferences at
-      <a href="https://adssettings.google.com/" target="_blank" rel="noopener noreferrer">Google Ads Settings</a>.
-    </p>
 
     <h3>Cookies</h3>
     <p>
-      GameHub itself does not use cookies, but Google AdSense may use cookies for personalized advertising.
+      We dont use any cookies.
     </p>
 
     <h3>Contact Us</h3>
@@ -47,11 +40,11 @@
         href="https://mail.google.com/mail/u/0/">edineth506@gmail.com</a>
     </p>
 
-    <p>Last updated: October 2025</p>
+    <p>Last updated:November 2025</p>
   </main>
 
   <footer>
-    <p>© 2025 GameHub. All rights reserved.</p>
+    <p>© 2025 mgames. All rights reserved.</p>
     <a href="../index.html">Back to Home</a>
   </footer>
 </body>
