--- a/index.html
+++ b/index.html
@@ -192,6 +192,24 @@
                         </div>
                     </a>
 
+                    <a href="games/spaceshooter v1.html" class="game-card" data-category="arcade">
+                        <div class="game-icon">🔺</div>
+                        <h3>spaceshooter v1</h3>
+                        <p>Blast through alien fleets. v1</p>
+                        <div class="game-categories">
+                            <span class="game-category arcade">Arcade</span>
+                        </div>
+                    </a>
+
+                    <a href="games/spaceshooter v2.html" class="game-card" data-category="arcade">
+                        <div class="game-icon">👾</div>
+                        <h3>spaceshooter v2</h3>
+                        <p>Blast through alien fleets. v2</p>
+                        <div class="game-categories">
+                            <span class="game-category arcade">Arcade</span>
+                        </div>
+                    </a>
+
                 </div>
             </section>
 
