--- a/index.html
+++ b/index.html
@@ -216,6 +216,24 @@
                         </div>
                     </a>
 
+                    <a href="games/Gravity Garden.html" class="game-card" data-category="arcade">
+                        <div class="game-icon">🍃</div>
+                        <h3>Gravity Garden</h3>
+                        <p>Flip and collect the seeds.</p>
+                        <div class="game-categories">
+                            <span class="game-category arcade">Arcade</span>
+                        </div>
+                    </a>
+
+                    <a href="games/light.html" class="game-card" data-category="arcade">
+                        <div class="game-icon">🔦</div>
+                        <h3>mirrors</h3>
+                        <p>Guide the light</p>
+                        <div class="game-categories">
+                            <span class="game-category arcade">Arcade</span>
+                        </div>
+                    </a>
+
                 </div>
             </section>
 
