--- a/index.html
+++ b/index.html
@@ -234,6 +234,15 @@
                         </div>
                     </a>
 
+                     <a href="games/bubble shooter.html" class="game-card" data-category="arcade">
+                        <div class="game-icon">🫧</div>
+                        <h3>bubble shooter</h3>
+                        <p></p>
+                        <div class="game-categories">
+                            <span class="game-category arcade">Arcade</span>
+                        </div>
+                    </a>
+
                 </div>
             </section>
 
