--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     </a>
 
                      <a href="games/bubble shooter.html" class="game-card" data-category="arcade">
-                        <div class="game-icon">🫧</div>
+                        <div class="game-icon">🟡</div>
                         <h3>bubble shooter</h3>
                         <p></p>
                         <div class="game-categories">
