--- a/index.html
+++ b/index.html
@@ -243,6 +243,15 @@
                         </div>
                     </a>
 
+                     <a href="games/fruit.html" class="game-card" data-category="arcade">
+                        <div class="game-icon">🍇</div>
+                        <h3>fruit crush</h3>
+                        <p></p>
+                        <div class="game-categories">
+                            <span class="game-category arcade">Arcade</span>
+                        </div>
+                    </a>
+
                 </div>
             </section>
 
